<resources>
    <string name="app_name">Shadow challenge</string>
    <string name="title">SHADOW CHALLENGE</string>
    <string name="introText">
        You just woke up from a scary dream.
        \nAs you open your eyes you look around and you find yourself trapped into a small dark room.
        \nThe room is empty and on the other side you see a shadow with large green eyes staring down at you.
        \nSuddenly the shadow starts speaking:
        \nHello stranger.
        \nI am Zurtok the mighty and you are my prisoner.
        \nIf you want to leave this room alive you must answer six questions correctly.
        \nIf you fail you will die...\n
        You can however choose the category of the answers. \nDecide wisely as your life depends on it...
    </string>
    <string name="nameTitle">Tell me your name stranger... :   </string>
    <string name="nameDescription">Enter Your name</string>
    <string name="categoryTitle">Choose your Category:   </string>
    <string-array name="Categories">
        <item>History</item>
        <item>Sports</item>
        <item>Space</item>
        <item>Nature</item>
    </string-array>
    <string name="getStartedBtn">Begin</string>
    <string name="namecheck">Tell me your Name or suffer the consequences!</string>
    <string name="historyIntro">
        After choosing the category the shadow split into pieces.
        \nIt changed in to all kinds of shapes and sizes.
        \nFrom tall temples to maps and tools.
        \nAlthough the green eyes that were starring at you disappeared into the darkness, you can still feel the ill intentions of the shadow...
        \nOnce again Zurtok\'s voice spread through the room, echoing from all the pieces combined.
        \nFor your sake I hope you chose correctly...
        \nNow lets begin with the questions..
    </string>
    <string name="historyFirstQuestion">This is my first question. \nWhen did Christopher Columbus reach America for the first time?</string>
    <string name="historyFirstQuestionAnswerOne">In 1468</string>
    <string name="historyFirstQuestionAnswerTwo">In 1514</string>
    <string name="historyFirstQuestionAnswerThree">In 1492</string>
    <string name="historyFirstQuestionAnswerFour">In 1453</string>
    <string name="historyQ1CorrectAnswer">In 1492</string>
    <string name="historySecondQuestion">Ok. Next... \nWho was the god of thunder in greek mythology?</string>
    <string name="historySecondQuestionAnswer">Enter your Answer</string>
    <string name="historyQ2CorrectAnswer">zeus</string>
    <string name="historyThirdQuestion">Don\'t think that i will go easy on you.... The next one is tricky... \nWhich of the names below belong to norse mythology gods?</string>
    <string name="historyThirdQuestionAnswerOne">Odin</string>
    <string name="historyThirdQuestionAnswerTwo">Fenrir</string>
    <string name="historyThirdQuestionAnswerThree">Sleipnir</string>
    <string name="historyThirdQuestionAnswerFour">Baldur</string>
    <string name="historyThirdQuestionAnswerFive">Freya</string>
    <string name="historyThirdQuestionAnswerSix">Kvasir</string>
    <string name="historyFourthQuestion">You think you are doing great but...  \nWhich year did the Berlin wall fall?</string>
    <string name="historyFourthQuestionAnswer">Enter your Answer</string>
    <string name="historyQ4CorrectAnswer">1989</string>
    <string name="historyFifthQuestion">You look tired and we still have two more questions... \nWhat was the purpose of the egyptian pyramids?</string>
    <string name="historyFifthQuestionAnswerOne">Temple</string>
    <string name="historyFifthQuestionAnswerTwo">Tomb</string>
    <string name="historyFifthQuestionAnswerThree">Palace</string>
    <string name="historyFifthQuestionAnswerFour">Prison</string>
    <string name="historyQ5CorrectAnswer">Tomb</string>
    <string name="historySixthQuestion">Finally... \nWhich of the countries below are considered UK territories?</string>
    <string name="historySixthQuestionAnswerOne">Gibraltar</string>
    <string name="historySixthQuestionAnswerTwo">Bermuda</string>
    <string name="historySixthQuestionAnswerThree">Antigua and Barbuda</string>
    <string name="historySixthQuestionAnswerFour">British Honduras</string>
    <string name="historySixthQuestionAnswerFive">British Virgin Islands</string>
    <string name="historySixthQuestionAnswerSix">Cayman Islands</string>
    <string name="natureIntro">
        After choosing the category the shadow split into pieces.
        \nIt changed in to all kinds of shapes and sizes.
        \nFrom tall trees to black fire and symbols.
        \nAlthough the green eyes that were starring at you disappeared into the darkness, you can still feel the ill intentions of the shadow...
        \nOnce again Zurtok\'s voice spread through the room, echoing from all the pieces combined.
        \nFor your sake I hope you chose correctly...
        \nNow lets begin with the questions..
    </string>
    <string name="natureFirstQuestion">This is my first question. \nLemurs are native to only one country on earth. Name it.</string>
    <string name="natureFirstQuestionAnswer">Enter your Answer</string>
    <string name="natureQ1CorrectAnswer">madagascar</string>
    <string name="natureSecondQuestion">Ok. Next... \nWhich two elements make up water</string>
    <string name="natureSecondQuestionAnswerOne">Hydrogen and oxygen</string>
    <string name="natureSecondQuestionAnswerTwo">Sodium and calcium</string>
    <string name="natureSecondQuestionAnswerThree">Calcium and oxygen</string>
    <string name="natureSecondQuestionAnswerFour">Hydrogen and sodium</string>
    <string name="natureQ2CorrectAnswer">Hydrogen and oxygen</string>
    <string name="natureThirdQuestion">Don\'t think that i will go easy on you.... The next one is tricky... \nWhich of the animals below belong to mammals?</string>
    <string name="natureThirdQuestionAnswerOne">Penguin</string>
    <string name="natureThirdQuestionAnswerTwo">Pangolin</string>
    <string name="natureThirdQuestionAnswerThree">White Shark</string>
    <string name="natureThirdQuestionAnswerFour">cheetah</string>
    <string name="natureThirdQuestionAnswerFive">Eagle</string>
    <string name="natureThirdQuestionAnswerSix">Panda</string>
    <string name="natureFourthQuestion">You think you are doing great but...  \nWhich is the fastest animal on earth?</string>
    <string name="natureFourthQuestionAnswer">Enter your Answer</string>
    <string name="natureQ4CorrectAnswer">cheetah</string>
    <string name="natureFifthQuestion">You look tired and we still have two more questions... \nWhich of the plants below are fruits?</string>
    <string name="natureFifthQuestionAnswerOne">Watermelon</string>
    <string name="natureFifthQuestionAnswerTwo">Banana</string>
    <string name="natureFifthQuestionAnswerThree">Spinach</string>
    <string name="natureFifthQuestionAnswerFour">Tomato</string>
    <string name="natureFifthQuestionAnswerFive">Cabbage</string>
    <string name="natureFifthQuestionAnswerSix">Potato</string>
    <string name="natureSixthQuestion">Finally... \nHow long does a day last in the north pole?</string>
    <string name="natureSixthQuestionAnswerOne">24 Hours</string>
    <string name="natureSixthQuestionAnswerTwo">1 Week</string>
    <string name="natureSixthQuestionAnswerThree">1 Month</string>
    <string name="natureSixthQuestionAnswerFour">6 Months</string>
    <string name="natureQ6CorrectAnswer">6 Months</string>
    <string name="spaceIntro">
        After choosing the category the shadow split into pieces.
        \nIt changed in to all kinds of shapes and sizes.
        \nFrom big planets to satellites fire and missiles.
        \nAlthough the green eyes that were starring at you disappeared into the darkness, you can still feel the ill intentions of the shadow...
        \nOnce again Zurtok\'s voice spread through the room, echoing from all the pieces combined.
        \nFor your sake I hope you chose correctly...
        \nNow lets begin with the questions..
    </string>
    <string name="spaceFirstQuestion">This is my first question. \nWhich is the largest planet of our Solar System?</string>
    <string name="spaceFirstQuestionAnswer">Enter your Answer</string>
    <string name="spaceQ1CorrectAnswer">jupiter</string>
    <string name="spaceSecondQuestion">Ok. Next... \nWhich is the planet with the most visible rings?</string>
    <string name="spaceSecondQuestionAnswerOne">Earth</string>
    <string name="spaceSecondQuestionAnswerTwo">Jupiter</string>
    <string name="spaceSecondQuestionAnswerThree">Saturn</string>
    <string name="spaceSecondQuestionAnswerFour">Pluto</string>
    <string name="spaceQ2CorrectAnswer">Saturn</string>
    <string name="spaceThirdQuestion">Don\'t think that i will go easy on you.... The next one is tricky... \nWhich of the planets below belong to our solar system?</string>
    <string name="spaceThirdQuestionAnswerOne">Earth</string>
    <string name="spaceThirdQuestionAnswerTwo">Ainope</string>
    <string name="spaceThirdQuestionAnswerThree">Vasleron</string>
    <string name="spaceThirdQuestionAnswerFour">Eathea</string>
    <string name="spaceThirdQuestionAnswerFive">Jupiter</string>
    <string name="spaceThirdQuestionAnswerSix">Mars</string>
    <string name="spaceFourthQuestion">You think you are doing great but...  \nWhich is the fastest animal on earth?</string>
    <string name="spaceFourthQuestionAnswer">Enter your Answer</string>
    <string name="spaceQ4CorrectAnswer">cheetah</string>
    <string name="spaceFifthQuestion">You look tired and we still have two more questions... \nWhich of the names below belong to Jupiter moons?</string>
    <string name="spaceFifthQuestionAnswerOne">Lysithea</string>
    <string name="spaceFifthQuestionAnswerTwo">Elara</string>
    <string name="spaceFifthQuestionAnswerThree">Ugleistea</string>
    <string name="spaceFifthQuestionAnswerFour">Leda</string>
    <string name="spaceFifthQuestionAnswerFive">Iemia</string>
    <string name="spaceFifthQuestionAnswerSix">Jaeter</string>
    <string name="spaceSixthQuestion">Finally... \nWhich planet has the greatest number of moons?</string>
    <string name="spaceSixthQuestionAnswerOne">Earth</string>
    <string name="spaceSixthQuestionAnswerTwo">Mars</string>
    <string name="spaceSixthQuestionAnswerThree">Jupiter</string>
    <string name="spaceSixthQuestionAnswerFour">Saturn</string>
    <string name="spaceQ6CorrectAnswer">Jupiter</string>
    <string name="sportsIntro">
        After choosing the category the shadow split into pieces.
        \nIt changed in to all kinds of shapes and sizes.
        \nPeople started running, jumping obstacles, swimming and dancing.
        \nAlthough the green eyes that were starring at you disappeared into the darkness, you can still feel the ill intentions of the shadow...
        \nOnce again Zurtok\'s voice spread through the room, echoing from all the pieces combined.
        \nFor your sake I hope you chose correctly...
        \nNow lets begin with the questions..
    </string>
    <string name="sportsFirstQuestion">This is my first question. \nIn which football club does Christiano Ronaldo play?</string>
    <string name="sportsFirstQuestionAnswerOne">Barcelona</string>
    <string name="sportsFirstQuestionAnswerTwo">Real Madrid</string>
    <string name="sportsFirstQuestionAnswerThree">Milan</string>
    <string name="sportsFirstQuestionAnswerFour">Chelcea</string>
    <string name="sportsQ1CorrectAnswer">Real Madrid</string>
    <string name="sportsSecondQuestion">Ok. Next... \nwhich country i the mother of the olympic games?</string>
    <string name="sportsSecondQuestionAnswer">Enter your Answer</string>
    <string name="sportsQ2CorrectAnswer">greece</string>
    <string name="submitBtn">Submit your answers</string>
</resources>