<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    tools:context="com.example.android.quizapp.Space">

    <LinearLayout style="@style/categoryWrapper">

        <RelativeLayout style="@style/categoryTitleWrapper">

            <ImageView
                android:id="@+id/categoryImage"
                style="@style/categoryImageStyle"
                android:src="@drawable/space" />

            <TextView
                android:id="@+id/categoryIntro"
                style="@style/categoryIntroText"
                android:text="@string/spaceIntro" />

            <ImageView
                style="@style/categoryIconStyle"
                android:src="@drawable/arrowcircle" />
        </RelativeLayout>

        <LinearLayout style="@style/wrapper">

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/spaceFirstQuestion" />

                <View style="@style/viewStyle" />

                <EditText
                    android:id="@+id/spaceQ1"
                    style="@style/editTextAnswerStyle"
                    android:hint="@string/spaceFirstQuestionAnswer"
                    android:inputType="textCapWords" />


            </LinearLayout>
            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/spaceSecondQuestion" />

                <View style="@style/viewStyle" />

                <RadioGroup
                    android:id="@+id/spaceQ2"
                    style="@style/radioGroup">


                    <RadioButton
                        android:id="@+id/SecondAnswerOne"
                        style="@style/radioButton"
                        android:text="@string/spaceSecondQuestionAnswerOne" />

                    <RadioButton
                        android:id="@+id/SecondAnswerTwo"
                        style="@style/radioButton"
                        android:text="@string/spaceSecondQuestionAnswerTwo" />


                    <RadioButton
                        android:id="@+id/SecondAnswerThree"
                        style="@style/radioButton"
                        android:text="@string/spaceSecondQuestionAnswerThree" />

                    <RadioButton
                        android:id="@+id/SecondAnswerFour"
                        style="@style/radioButton"
                        android:text="@string/spaceSecondQuestionAnswerFour" />

                </RadioGroup>


            </LinearLayout>


            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/spaceThirdQuestion" />

                <View style="@style/viewStyle" />

                <LinearLayout style="@style/checkBoxContainer">

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/notMammal1"
                            style="@style/checkBox"
                            android:text="@string/spaceThirdQuestionAnswerOne" />

                        <CheckBox
                            android:id="@+id/notMammal2"
                            style="@style/checkBox"
                            android:text="@string/spaceThirdQuestionAnswerThree" />

                        <CheckBox
                            android:id="@+id/notMammal3"
                            style="@style/checkBox"
                            android:text="@string/spaceThirdQuestionAnswerFive" />
                    </LinearLayout>

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/mammal1"
                            style="@style/checkBox"
                            android:text="@string/spaceThirdQuestionAnswerTwo" />

                        <CheckBox
                            android:id="@+id/mammal2"
                            style="@style/checkBox"
                            android:text="@string/spaceThirdQuestionAnswerFour" />

                        <CheckBox
                            android:id="@+id/mammal3"
                            style="@style/checkBox"
                            android:text="@string/spaceThirdQuestionAnswerSix" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/spaceFourthQuestion" />

                <View style="@style/viewStyle" />

                <EditText
                    android:id="@+id/spaceQ4"
                    style="@style/editTextAnswerStyle"
                    android:hint="@string/spaceFourthQuestionAnswer"
                    android:inputType="textCapWords" />


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/spaceFifthQuestion" />

                <View style="@style/viewStyle" />

                <LinearLayout style="@style/checkBoxContainer">

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/fruit1"
                            style="@style/checkBox"
                            android:text="@string/spaceFifthQuestionAnswerOne" />

                        <CheckBox
                            android:id="@+id/notFruit1"
                            style="@style/checkBox"
                            android:text="@string/spaceFifthQuestionAnswerThree" />

                        <CheckBox
                            android:id="@+id/notFruit2"
                            style="@style/checkBox"
                            android:text="@string/spaceFifthQuestionAnswerFive" />
                    </LinearLayout>

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/fruit2"
                            style="@style/checkBox"
                            android:text="@string/spaceFifthQuestionAnswerTwo" />

                        <CheckBox
                            android:id="@+id/fruit3"
                            style="@style/checkBox"
                            android:text="@string/spaceFifthQuestionAnswerFour" />

                        <CheckBox
                            android:id="@+id/notFruit3"
                            style="@style/checkBox"
                            android:text="@string/spaceFifthQuestionAnswerSix" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/spaceSixthQuestion" />

                <View style="@style/viewStyle" />

                <RadioGroup
                    android:id="@+id/spaceQ6"
                    style="@style/radioGroup">


                    <RadioButton
                        android:id="@+id/SixthAnswerOne"
                        style="@style/radioButton"
                        android:text="@string/spaceSixthQuestionAnswerOne" />

                    <RadioButton
                        android:id="@+id/SixthAnswerTwo"
                        style="@style/radioButton"
                        android:text="@string/spaceSixthQuestionAnswerTwo" />


                    <RadioButton
                        android:id="@+id/SixthAnswerThree"
                        style="@style/radioButton"
                        android:text="@string/spaceSixthQuestionAnswerThree" />

                    <RadioButton
                        android:id="@+id/SixthAnswerFour"
                        style="@style/radioButton"
                        android:text="@string/spaceSixthQuestionAnswerFour" />

                </RadioGroup>


            </LinearLayout>




        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitSpace"
            android:text="@string/submitBtn" />

    </LinearLayout>

</ScrollView>
