<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    tools:context="com.example.android.quizapp.Nature">

    <LinearLayout style="@style/categoryWrapper">

        <RelativeLayout style="@style/categoryTitleWrapper">

            <ImageView
                android:id="@+id/categoryImage"
                style="@style/categoryImageStyle"
                android:src="@drawable/nature" />

            <TextView
                android:id="@+id/categoryIntro"
                style="@style/categoryIntroText"
                android:text="@string/natureIntro" />

            <ImageView
                style="@style/categoryIconStyle"
                android:src="@drawable/arrowcircle" />
        </RelativeLayout>

        <LinearLayout style="@style/wrapper">

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/natureFirstQuestion" />

                <View style="@style/viewStyle" />

                <EditText
                    android:id="@+id/natureQ1"
                    style="@style/editTextAnswerStyle"
                    android:hint="@string/natureFirstQuestionAnswer"
                    android:inputType="textCapWords" />


            </LinearLayout>
            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/natureSecondQuestion" />

                <View style="@style/viewStyle" />

                <RadioGroup
                    android:id="@+id/natureQ2"
                    style="@style/radioGroup">


                    <RadioButton
                        android:id="@+id/SecondAnswerOne"
                        style="@style/radioButton"
                        android:text="@string/natureSecondQuestionAnswerOne" />

                    <RadioButton
                        android:id="@+id/SecondAnswerTwo"
                        style="@style/radioButton"
                        android:text="@string/natureSecondQuestionAnswerTwo" />


                    <RadioButton
                        android:id="@+id/SecondAnswerThree"
                        style="@style/radioButton"
                        android:text="@string/natureSecondQuestionAnswerThree" />

                    <RadioButton
                        android:id="@+id/SecondAnswerFour"
                        style="@style/radioButton"
                        android:text="@string/natureSecondQuestionAnswerFour" />

                </RadioGroup>


            </LinearLayout>


            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/natureThirdQuestion" />

                <View style="@style/viewStyle" />

                <LinearLayout style="@style/checkBoxContainer">

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/notMammal1"
                            style="@style/checkBox"
                            android:text="@string/natureThirdQuestionAnswerOne" />

                        <CheckBox
                            android:id="@+id/notMammal2"
                            style="@style/checkBox"
                            android:text="@string/natureThirdQuestionAnswerThree" />

                        <CheckBox
                            android:id="@+id/notMammal3"
                            style="@style/checkBox"
                            android:text="@string/natureThirdQuestionAnswerFive" />
                    </LinearLayout>

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/mammal1"
                            style="@style/checkBox"
                            android:text="@string/natureThirdQuestionAnswerTwo" />

                        <CheckBox
                            android:id="@+id/mammal2"
                            style="@style/checkBox"
                            android:text="@string/natureThirdQuestionAnswerFour" />

                        <CheckBox
                            android:id="@+id/mammal3"
                            style="@style/checkBox"
                            android:text="@string/natureThirdQuestionAnswerSix" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/natureFourthQuestion" />

                <View style="@style/viewStyle" />

                <EditText
                    android:id="@+id/natureQ4"
                    style="@style/editTextAnswerStyle"
                    android:hint="@string/natureFourthQuestionAnswer"
                    android:inputType="textCapWords" />


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/natureFifthQuestion" />

                <View style="@style/viewStyle" />

                <LinearLayout style="@style/checkBoxContainer">

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/fruit1"
                            style="@style/checkBox"
                            android:text="@string/natureFifthQuestionAnswerOne" />

                        <CheckBox
                            android:id="@+id/notFruit1"
                            style="@style/checkBox"
                            android:text="@string/natureFifthQuestionAnswerThree" />

                        <CheckBox
                            android:id="@+id/notFruit2"
                            style="@style/checkBox"
                            android:text="@string/natureFifthQuestionAnswerFive" />
                    </LinearLayout>

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/fruit2"
                            style="@style/checkBox"
                            android:text="@string/natureFifthQuestionAnswerTwo" />

                        <CheckBox
                            android:id="@+id/fruit3"
                            style="@style/checkBox"
                            android:text="@string/natureFifthQuestionAnswerFour" />

                        <CheckBox
                            android:id="@+id/notFruit3"
                            style="@style/checkBox"
                            android:text="@string/natureFifthQuestionAnswerSix" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/natureSixthQuestion" />

                <View style="@style/viewStyle" />

                <RadioGroup
                    android:id="@+id/natureQ6"
                    style="@style/radioGroup">


                    <RadioButton
                        android:id="@+id/SixthAnswerOne"
                        style="@style/radioButton"
                        android:text="@string/natureSixthQuestionAnswerOne" />

                    <RadioButton
                        android:id="@+id/SixthAnswerTwo"
                        style="@style/radioButton"
                        android:text="@string/natureSixthQuestionAnswerTwo" />


                    <RadioButton
                        android:id="@+id/SixthAnswerThree"
                        style="@style/radioButton"
                        android:text="@string/natureSixthQuestionAnswerThree" />

                    <RadioButton
                        android:id="@+id/SixthAnswerFour"
                        style="@style/radioButton"
                        android:text="@string/natureSixthQuestionAnswerFour" />

                </RadioGroup>


            </LinearLayout>




        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitNature"
            android:text="@string/submitBtn" />

    </LinearLayout>

</ScrollView>
