<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    tools:context="com.example.android.quizapp.History">

    <LinearLayout style="@style/categoryWrapper">

        <RelativeLayout style="@style/categoryTitleWrapper">

            <ImageView
                android:id="@+id/categoryImage"
                style="@style/categoryImageStyle"
                android:src="@drawable/history" />

            <TextView
                android:id="@+id/categoryIntro"
                style="@style/categoryIntroText"
                android:text="@string/historyIntro" />

            <ImageView
                style="@style/categoryIconStyle"
                android:src="@drawable/arrowcircle" />
        </RelativeLayout>

        <LinearLayout style="@style/wrapper">

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/historyFirstQuestion" />

                <View style="@style/viewStyle" />

                <RadioGroup
                    android:id="@+id/FirstQuestion"
                    style="@style/radioGroup">


                    <RadioButton
                        android:id="@+id/answerOne"
                        style="@style/radioButton"
                        android:text="@string/historyFirstQuestionAnswerOne" />

                    <RadioButton
                        android:id="@+id/answerTwo"
                        style="@style/radioButton"
                        android:text="@string/historyFirstQuestionAnswerTwo" />


                    <RadioButton
                        android:id="@+id/answerThree"
                        style="@style/radioButton"
                        android:text="@string/historyFirstQuestionAnswerOne" />

                    <RadioButton
                        android:id="@+id/answerFour"
                        style="@style/radioButton"
                        android:text="@string/historyFirstQuestionAnswerTwo" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/historySecondQuestion" />

                <View style="@style/viewStyle" />

                <EditText
                    android:id="@+id/historyQ2"
                    style="@style/editTextAnswerStyle"
                    android:hint="@string/historySecondQuestionAnswer"
                    android:inputType="textCapWords" />


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    style="@style/questionStyle"
                    android:text="@string/historyThirdQuestion" />

                <View style="@style/viewStyle" />

                <LinearLayout style="@style/checkBoxContainer">

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/god1"
                            style="@style/checkBox"
                            android:text="@string/historyThirdQuestionAnswerOne" />

                        <CheckBox
                            android:id="@+id/notGod2"
                            style="@style/checkBox"
                            android:text="@string/historyThirdQuestionAnswerThree" />

                        <CheckBox
                            android:id="@+id/god3"
                            style="@style/checkBox"
                            android:text="@string/historyThirdQuestionAnswerFive" />
                    </LinearLayout>

                    <LinearLayout style="@style/CheckboxColumn">

                        <CheckBox
                            android:id="@+id/notGod1"
                            style="@style/checkBox"
                            android:text="@string/historyThirdQuestionAnswerTwo" />

                        <CheckBox
                            android:id="@+id/god2"
                            style="@style/checkBox"
                            android:text="@string/historyThirdQuestionAnswerFour" />

                        <CheckBox
                            android:id="@+id/notGod3"
                            style="@style/checkBox"
                            android:text="@string/historyThirdQuestionAnswerSix" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
